--- a/management/src/main/resources/application.yml
+++ b/management/src/main/resources/application.yml
@@ -14,3 +14,10 @@ spring:
 logging:
   level:
     com.usermanagementsystem.management: debug
+
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
